--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,4 +27,316 @@ body {
 input,
 button {
   border: none;
+}
+
+.header {
+  padding-top: 1rem;
+  background-color: #323232;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+    padding: 1.5rem 3rem;
+    justify-content: flex-start;
+    gap: 2rem;
+  }
+}
+.header__nav {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    width: 30%;
+    padding: 0 2rem;
+  }
+}
+.header__list {
+  padding-top: 1rem;
+  list-style: none;
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .header__list {
+    padding: 0;
+  }
+}
+.header__list-item--active {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #ffffff;
+  font-weight: bold;
+}
+.header__list-item--active:hover, .header__list-item--active:active, .header__list-item--active:focus {
+  border-bottom: 2px solid #ffffff;
+  color: white;
+  font-weight: 700;
+}
+@media screen and (min-width: 768px) {
+  .header__list-item--active:hover, .header__list-item--active:active, .header__list-item--active:focus {
+    border-bottom: none;
+    text-decoration: underline;
+    text-decoration-color: #ffffff;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 1.65rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__list-item--active {
+    padding-bottom: 0;
+    display: flex;
+    text-align: left;
+    justify-content: flex-start;
+    border: 0;
+  }
+}
+.header__list-item--active a {
+  color: white;
+  text-decoration: none;
+}
+.header__list-item {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+}
+.header__list-item:hover, .header__list-item:active, .header__list-item:focus {
+  border-bottom: 2px solid #ffffff;
+  color: white;
+  font-weight: 600;
+}
+@media screen and (min-width: 768px) {
+  .header__list-item:hover, .header__list-item:active, .header__list-item:focus {
+    border-bottom: none;
+    text-decoration: underline;
+    text-decoration-color: #ffffff;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 1.65rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: flex-start;
+    text-align: left;
+    width: 100%;
+    border: 0;
+  }
+}
+.header a:link {
+  color: #e1e1e1;
+  text-decoration: none;
+}
+.header a:visited {
+  color: #e1e1e1;
+}
+
+.hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-bio.jpg);
+  width: 100%;
+  height: 25vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  font-family: "Avenir-bold";
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 50vh;
+    font-size: 40px;
+  }
+}
+.hero__title {
+  position: absolute;
+  color: #ffffff;
+  top: 50%;
+  left: 1rem;
+  transform: translate(0, -50%);
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    left: 3rem;
+  }
+}
+
+.introduction {
+  padding: 1rem;
+}
+.introduction__title {
+  padding: 1rem 0;
+}
+@media screen and (min-width: 768px) {
+  .introduction__title {
+    padding: 1rem 3rem;
+  }
+}
+.introduction__img-container {
+  width: 100%;
+  overflow: hidden;
+}
+.introduction img {
+  width: 100%;
+  height: 200px;
+  -o-object-position: bottom;
+     object-position: bottom;
+}
+@media screen and (min-width: 768px) {
+  .introduction img {
+    width: 80%;
+    height: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .introduction__wrapper {
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.introduction__endorsement {
+  padding-top: 1rem;
+}
+.introduction__endorsement-name {
+  padding-top: 1rem;
+}
+.introduction__subtitle {
+  padding-top: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .introduction__paragraph-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3rem;
+  }
+}
+.introduction__paragraph {
+  padding-top: 1rem;
+}
+
+.photo-gallery {
+  padding: 1rem;
+  background-color: #fafafa;
+}
+@media screen and (min-width: 768px) {
+  .photo-gallery {
+    padding: 1rem 3rem 3rem 3rem;
+  }
+}
+.photo-gallery__title {
+  padding-bottom: 1rem;
+}
+.photo-gallery__image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .photo-gallery__image-container {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+    align-items: center;
+  }
+}
+.photo-gallery img {
+  width: 100%;
+  height: auto;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .photo-gallery img {
+    width: calc(33.33% - 1rem);
+    padding: 0;
+  }
+}
+
+.footer {
+  background-color: #323232;
+  padding: 1rem;
+  color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    position: relative;
+  }
+}
+.footer__title {
+  width: 250px;
+}
+@media screen and (min-width: 768px) {
+  .footer__title-wrapper {
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 2rem;
+    align-items: center;
+  }
+}
+.footer__social-container {
+  padding: 1rem 0;
+  display: flex;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .footer__social-container {
+    padding: 0;
+    width: 250px;
+    height: 50%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__info-wrapper {
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 2rem;
+  }
+}
+.footer__info {
+  padding: 1rem 0;
+}
+@media screen and (min-width: 768px) {
+  .footer__info {
+    width: 250px;
+  }
+}
+.footer__info-name {
+  padding-bottom: 1rem;
+  font-family: "Avenir-demi";
+}
+.footer__info-address {
+  padding-bottom: 1rem;
+  font-weight: 400;
+}
+.footer__logo-container {
+  padding: 2rem 0 1rem;
+}
+@media screen and (min-width: 768px) {
+  .footer__logo-container {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem 3rem 0 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__copyright {
+    padding: 0 3rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
