--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,5 @@
+@use "./partials/variables" as *;
+@use "./partials/mixins" as *;
 @use "./partials/fonts" as *;
 
 * {
@@ -14,4 +16,343 @@ body {
 input,
 button {
     border: none;
+}
+
+.header {
+    padding-top: 1rem;
+    background-color: $bandsite-black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @include tablet {
+        flex-direction: row;
+        padding: 1.5rem 3rem;
+        justify-content: flex-start;
+        gap: 2rem;
+    }
+
+    &__nav {
+        width: 100%;
+
+        @include tablet {
+            width: 30%;
+            padding: 0 2rem;
+        }
+    }
+
+    &__list {
+        padding-top: 1rem;
+        list-style: none;
+        display: flex;
+        // flex-direction: row;
+
+        @include tablet {
+            padding: 0;
+        }
+    }
+
+    &__list-item--active {
+        display: inline-block;
+        width: 50%;
+        text-align: center;
+        padding-bottom: 1rem;
+        border-bottom: 2px solid $white;
+        font-weight: bold;
+
+        &:hover,
+        &:active,
+        &:focus {
+            border-bottom: 2px solid $white;
+            color: white;
+            font-weight: 700;
+
+            @include tablet {
+                border-bottom: none;
+                text-decoration: underline;
+                text-decoration-color: $white;
+                text-decoration-thickness: 2px;
+                text-underline-offset: 1.65rem;
+            }
+        }
+
+        @include tablet {
+            padding-bottom: 0;
+            display: flex;
+            text-align: left;
+            justify-content: flex-start;
+            border: 0;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+
+            // @include tablet {
+            //     padding: 0;
+            //     border-bottom: none;
+            //     text-decoration: underline white;
+            //     text-decoration-thickness: 10px;
+            //     text-underline-offset: 10px;
+            // }
+        }
+    }
+
+    &__list-item {
+        display: inline-block;
+        width: 50%;
+        text-align: center;
+
+        &:hover,
+        &:active,
+        &:focus {
+            border-bottom: 2px solid $white;
+            color: white;
+            font-weight: 600;
+
+            @include tablet {
+                border-bottom: none;
+                text-decoration: underline;
+                text-decoration-color: $white;
+                text-decoration-thickness: 2px;
+                text-underline-offset: 1.65rem;
+            }
+        }
+    }
+
+    @include tablet {
+        display: flex;
+        justify-content: flex-start;
+        text-align: left;
+        width: 100%;
+        border: 0;
+    }
+    a {
+        &:link {
+            color: $mercury;
+            text-decoration: none;
+        }
+
+        &:visited {
+            color: $mercury;
+        }
+    }
+}
+
+.hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-bio.jpg);
+    width: 100%;
+    height: 25vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    font-family: "Avenir-bold";
+
+    @include tablet {
+        height: 50vh;
+        font-size: 40px;
+    }
+
+    &__title {
+        position: absolute;
+        color: $white;
+        top: 50%;
+        left: 1rem;
+        transform: translate(0, -50%);
+        display: flex;
+
+        @include tablet {
+            left: 3rem;
+        }
+    }
+}
+
+.introduction {
+    // @include body-copy;
+    padding: 1rem;
+
+    &__title {
+        padding: 1rem 0;
+
+        @include tablet {
+            padding: 1rem 3rem;
+        }
+    }
+
+    &__img-container {
+        width: 100%;
+        overflow: hidden;
+    }
+    img {
+        width: 100%;
+        height: 200px;
+        // object-fit: cover;
+        object-position: bottom;
+
+        @include tablet {
+            width: 80%;
+            height: 400px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    &__wrapper {
+        @include tablet {
+            width: 80%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    &__endorsement {
+        padding-top: 1rem;
+
+        &-name {
+            padding-top: 1rem;
+        }
+    }
+
+    &__subtitle {
+        padding-top: 1rem;
+    }
+
+    &__paragraph-container {
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 3rem;
+        }
+    }
+
+    &__paragraph {
+        padding-top: 1rem;
+    }
+}
+
+.photo-gallery {
+    padding: 1rem;
+    background-color: $alabaster;
+
+    @include tablet {
+        padding: 1rem 3rem 3rem 3rem;
+    }
+
+    &__title {
+        padding-bottom: 1rem;
+    }
+
+    &__image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @include tablet {
+            flex-wrap: wrap;
+            flex-direction: row;
+            // align-content: flex-start;
+            justify-content: space-evenly;
+            gap: 1rem;
+            align-items: center;
+        }
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        padding-bottom: 1rem;
+
+        @include tablet {
+            width: calc(33.33% - 1rem); // 3 images per row with gap
+            padding: 0;
+        }
+    }
+}
+
+.footer {
+    background-color: $bandsite-black;
+    padding: 1rem;
+    color: $white;
+
+    @include tablet {
+        position: relative;
+    }
+
+    &__title {
+        width: 250px;
+        // font-size: 40px;
+    }
+
+    &__title-wrapper {
+        @include tablet {
+            padding: 0 3rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: 2rem;
+            align-items: center;
+        }
+    }
+
+    &__social-container {
+        padding: 1rem 0;
+        display: flex;
+        justify-content: flex-start;
+        gap: 2rem;
+
+        @include tablet {
+            padding: 0;
+            width: 250px;
+            height: 50%;
+        }
+    }
+
+    &__info-wrapper {
+        @include tablet {
+            padding: 0 3rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: 2rem;
+        }
+    }
+
+    &__info {
+        padding: 1rem 0;
+
+        @include tablet {
+            width: 250px;
+        }
+        &-name {
+            padding-bottom: 1rem;
+            font-family: "Avenir-demi";
+        }
+        &-address {
+            padding-bottom: 1rem;
+            font-weight: 400;
+        }
+    }
+
+    &__logo-container {
+        padding: 2rem 0 1rem;
+
+        @include tablet {
+            display: flex;
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 1rem 3rem 0 0;
+        }
+    }
+
+    &__copyright {
+        @include tablet {
+            padding: 0 3rem;
+        }
+    }
 }
