--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -274,6 +274,107 @@ button {
     }
 }
 
+.comment {
+    padding: 1rem;
+
+    &__wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        // align-items: center;
+        gap: 1rem;
+    }
+    &__profile-container {
+        display: flex;
+        padding-top: 2rem;
+    }
+    &__profile_image {
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+    }
+
+    &__form {
+        width: 100%;
+
+        &-container {
+            display: flex;
+            flex-direction: column;
+            padding-top: 1rem;
+        }
+
+        &-label {
+            font-size: 13px;
+            color: $silver;
+        }
+
+        &-inputbox {
+            border: 1px solid $silver;
+            background-color: $alabaster;
+            border-radius: 5px;
+            padding: 0.5rem;
+
+            &-text {
+                padding-bottom: 3rem;
+            }
+        }
+
+        &-button {
+            width: 100%;
+            color: $white;
+            background-color: $bandsite-black;
+            border-radius: 5px;
+            margin-top: 1rem;
+            padding: 1rem;
+        }
+    }
+
+    &__list-wrapper {
+        border-bottom: 1px solid $silver;
+        padding: 1rem 0;
+    }
+
+    &__card {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1rem;
+        border-top: 1px solid $silver;
+        padding-top: 1rem;
+
+        &-avatar {
+            background-color: $mercury;
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            flex-shrink: 0;
+            display: block;
+        }
+
+        &-container {
+            width: 100%;
+            flex-grow: 1;
+        }
+
+        &-name_date_container {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &-name {
+            font-weight: 700;
+        }
+
+        &-date {
+            color: $silver;
+        }
+
+        &-content {
+            padding: 1rem 0;
+        }
+    }
+}
+
 .footer {
     background-color: $bandsite-black;
     padding: 1rem;
