--- a/styles/show.css
+++ b/styles/show.css
@@ -136,14 +136,13 @@ button {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-bio.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/Photo-gallery-3.jpg);
   width: 100%;
-  height: 25vh;
+  height: 40vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  font-family: "Avenir-bold";
 }
 @media screen and (min-width: 768px) {
   .hero {
@@ -151,18 +150,19 @@ button {
     font-size: 40px;
   }
 }
-.hero__title {
+.hero__title-container {
+  width: 100%;
   position: absolute;
   color: #ffffff;
-  top: 50%;
-  left: 1rem;
-  transform: translate(0, -50%);
+  padding: 2rem 1rem;
   display: flex;
+  flex-direction: column;
 }
-@media screen and (min-width: 768px) {
-  .hero__title {
-    left: 3rem;
-  }
+.hero__sound {
+  padding-top: 1rem;
+}
+.hero__subtitle {
+  padding-bottom: 1rem;
 }
 
 .show__title {
