--- a/styles/show.scss
+++ b/styles/show.scss
@@ -141,32 +141,46 @@ button {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-bio.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/Photo-gallery-3.jpg);
     width: 100%;
-    height: 25vh;
+    height: 40vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    font-family: "Avenir-bold";
+    // font-family: "Avenir-bold";
 
     @include tablet {
         height: 50vh;
         font-size: 40px;
     }
 
-    &__title {
+    &__title-container {
+        width: 100%;
         position: absolute;
         color: $white;
-        top: 50%;
-        left: 1rem;
-        transform: translate(0, -50%);
+        padding: 2rem 1rem;
+        // top: 50%;
+        // left: 1rem;
+        // transform: translate(0, -50%);
         display: flex;
-
-        @include tablet {
-            left: 3rem;
-        }
+        flex-direction: column;
     }
+
+    &__sound {
+        padding-top: 1rem;
+    }
+    &__subtitle {
+        padding-bottom: 1rem;
+    }
+
+    &__title {
+        font-weight: bold;
+
+    //     @include tablet {
+    //         left: 3rem;
+    //     }
+    // }
 }
 .show {
     &__title {
