--- a/styles/show.scss
+++ b/styles/show.scss
@@ -37,7 +37,7 @@ button {
         width: 100%;
 
         @include tablet {
-            width: 30%;
+            width: 250px;
             padding: 0 2rem;
         }
     }
@@ -46,9 +46,10 @@ button {
         padding-top: 1rem;
         list-style: none;
         display: flex;
-        // flex-direction: row;
+        flex-direction: row;
 
         @include tablet {
+            gap: 2rem;
             padding: 0;
         }
     }
@@ -59,43 +60,26 @@ button {
         text-align: center;
         padding-bottom: 1rem;
         border-bottom: 2px solid $white;
-        font-weight: bold;
+        font-family: "Avenir-bold";
+
+        @include tablet {
+            border: 0;
+            padding: 0;
+            text-decoration: underline;
+            text-decoration-color: $white;
+            text-decoration-thickness: 2.5px;
+            text-underline-offset: 1.7rem;
+        }
 
         &:hover,
-        &:active,
         &:focus {
-            border-bottom: 2px solid $white;
-            color: white;
-            font-weight: 700;
-
             @include tablet {
                 border-bottom: none;
                 text-decoration: underline;
                 text-decoration-color: $white;
-                text-decoration-thickness: 2px;
-                text-underline-offset: 1.65rem;
+                text-decoration-thickness: 2.5px;
+                text-underline-offset: 1.7rem;
             }
-        }
-
-        @include tablet {
-            padding-bottom: 0;
-            display: flex;
-            text-align: left;
-            justify-content: flex-start;
-            border: 0;
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-
-            // @include tablet {
-            //     padding: 0;
-            //     border-bottom: none;
-            //     text-decoration: underline white;
-            //     text-decoration-thickness: 10px;
-            //     text-underline-offset: 10px;
-            // }
         }
     }
 
@@ -105,28 +89,17 @@ button {
         text-align: center;
 
         &:hover,
-        &:active,
         &:focus {
             border-bottom: 2px solid $white;
-            color: white;
-            font-weight: 600;
 
             @include tablet {
                 border-bottom: none;
                 text-decoration: underline;
                 text-decoration-color: $white;
-                text-decoration-thickness: 2px;
-                text-underline-offset: 1.65rem;
+                text-decoration-thickness: 2.5px;
+                text-underline-offset: 1.7rem;
             }
         }
-    }
-
-    @include tablet {
-        display: flex;
-        justify-content: flex-start;
-        text-align: left;
-        width: 100%;
-        border: 0;
     }
     a {
         &:link {
@@ -143,7 +116,7 @@ button {
 .hero {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/Photo-gallery-3.jpg);
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -151,7 +124,7 @@ button {
     // font-family: "Avenir-bold";
 
     @include tablet {
-        height: 50vh;
+        height: 70vh;
         font-size: 40px;
     }
 
@@ -165,33 +138,52 @@ button {
         // transform: translate(0, -50%);
         display: flex;
         flex-direction: column;
+
+        @include tablet {
+            padding: 3rem;
+        }
     }
 
     &__sound {
         padding-top: 1rem;
+        @include tablet {
+            width: 50%;
+        }
     }
     &__subtitle {
         padding-bottom: 1rem;
     }
-
-    &__title {
-        font-weight: bold;
-
-    //     @include tablet {
-    //         left: 3rem;
-    //     }
-    // }
 }
 .show {
+    &__list-wrapper {
+        @include tablet {
+            padding-bottom: 2rem;
+        }
+    }
     &__title {
         padding: 1rem;
+
+        @include tablet {
+            padding: 1rem 3rem;
+        }
     }
     &__card-container {
         border-bottom: 1px solid $silver;
+
+        @include tablet {
+            margin: 0 1rem;
+        }
     }
 
     &__card {
         padding: 1rem;
+
+        @include tablet {
+            padding: 1rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     }
 
     &__date-header,
@@ -201,15 +193,43 @@ button {
         font-size: 13px;
         color: $silver;
         // padding-bottom: 1rem;
+
+        @include tablet {
+            display: none;
+        }
     }
     &__date {
         padding-bottom: 1rem;
         font-family: "Avenir-demi";
         font-size: 17px;
+
+        @include tablet {
+            width: 147px;
+            padding: 0;
+        }
     }
     &__venue,
     &__location {
         padding-bottom: 1rem;
+        @include tablet {
+            width: 147px;
+            padding: 0;
+        }
+    }
+    &__hedaer-tablet-container {
+        display: flex;
+        padding: 0 3rem;
+        justify-content: space-between;
+    }
+    &__header-tablet {
+        @include tablet {
+            padding-bottom: 1rem;
+            font-family: "Avenir-demi";
+            font-size: 13px;
+            color: $silver;
+            width: 147px;
+            padding: 0;
+        }
     }
 
     &__button {
@@ -218,8 +238,13 @@ button {
         color: white;
         padding: 1rem;
         border-radius: 5px;
+
+        @include tablet {
+            width: 147px;
+        }
     }
 }
+
 .footer {
     background-color: $bandsite-black;
     padding: 1rem;
@@ -236,7 +261,7 @@ button {
 
     &__title-wrapper {
         @include tablet {
-            padding: 0 3rem;
+            padding: 0 2rem;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
@@ -260,7 +285,7 @@ button {
 
     &__info-wrapper {
         @include tablet {
-            padding: 0 3rem;
+            padding: 0 2rem;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
@@ -298,7 +323,7 @@ button {
 
     &__copyright {
         @include tablet {
-            padding: 0 3rem;
+            padding: 0 2rem;
         }
     }
 }
